webapp: minor bugs with the timer.
* don’t let it animate out showing a nonsensical time; just hide it.
* watch first-from-tail so overlap zone favors the new timer.

--- a/webapp/src/styles.sass
+++ b/webapp/src/styles.sass
@@ -213,7 +213,10 @@ a
       float: right
       overflow: hidden
       transition: 1s width
+      visibility: hidden
       width: 0
+      &.has-model
+        visibility: visible
       &.active
         width: 30em
       .player-timestamp-event
